--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,58 @@ services:
 
   eureka-server:
     build:
-      context: ./EurikaServer
+      context: ./EurikaServer  
       dockerfile: Dockerfile
-    container_name: eurika-server
+    container_name: eureka-server
     ports:
       - "8761:8761"
-  
+    environment:
+      - EUREKA_URI=http://eureka-server:8761/eureka
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8761/actuator/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
   training-microservice:
     build:
       context: ./TrainingMicroservice
       dockerfile: Dockerfile
     container_name: training-microservice
     ports:
-      - "8081:8080"
+      - "8081:8081"          
     environment:
       - EUREKA_URI=http://eureka-server:8761/eureka
+      - SPRING_PROFILES_ACTIVE=local
+      - SERVER_PORT=8081
     depends_on:
       - eureka-server
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8761/actuator/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    
+  main-service:
+    build:
+      context: ./Gym-Spring-Boot
+      dockerfile: Dockerfile
+    container_name: main-service
+    ports:
+      - "8080:8080"        
+    environment:
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka
+      - SPRING_PROFILES_ACTIVE=local
+    depends_on:
+      - eureka-server
+      - training-microservice
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
